force-app/main/default/objects/vlocity_ps__UiFacet__c/fields/vlocity_ps__IconVlocityAttachmentId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__IconVlocityAttachmentId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Icon</label>
    <referenceTo>vlocity_ps__VlocityAttachment__c</referenceTo>
    <relationshipLabel>Vlocity UI Facets</relationshipLabel>
    <relationshipName>VlocityUIFacets</relationshipName>
    <type>Lookup</type>
</CustomField>