force-app/main/default/objects/vlocity_ps__UiFacet__c/fields/vlocity_ps__IframeSource__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__IframeSource__c</fullName>
    <label>iframe Source</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>