force-app/main/default/objects/vlocity_ps__UiFacet__c/listViews/vlocity_ps__All.listView-meta.xml
<ListView>
    <fullName>vlocity_ps__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>